force-app/main/default/objects/Assessment__c/fields/Assessment_Description__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Description__c</fullName>
    <label>Assessment Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>