force-app/main/default/objects/Assessment__c/fields/Assessment_Detail_JSON__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Detail_JSON__c</fullName>
    <label>Assessment Detail JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>