force-app/main/default/objects/Assessment__c/fields/Field_Update_JSON__c.field-meta.xml
<CustomField>
    <fullName>Field_Update_JSON__c</fullName>
    <label>Field Update JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>