force-app/main/default/objects/Assessment__c/fields/isTemplate__c.field-meta.xml
<CustomField>
    <fullName>isTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTemplate?</label>
    <type>Checkbox</type>
</CustomField>