force-app/main/default/objects/Assessment__c/fields/On_Completion_Field_Update__c.field-meta.xml
<CustomField>
    <fullName>On_Completion_Field_Update__c</fullName>
    <label>On Completion Field Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>