force-app/main/default/objects/Assessment__c/fields/Scoring_JSON__c.field-meta.xml
<CustomField>
    <fullName>Scoring_JSON__c</fullName>
    <label>Scoring JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>