force-app/main/default/objects/Assessment__c/fields/Section_Text_JSON__c.field-meta.xml
<CustomField>
    <fullName>Section_Text_JSON__c</fullName>
    <label>Section Text JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>