force-app/main/default/objects/Assessment__c/fields/Total_Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Max_Score__c</fullName>
    <label>Total Max Score</label>
    <summarizedField>Assessment_Question__c.Max_Score__c</summarizedField>
    <summaryForeignKey>Assessment_Question__c.Assessment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>